--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ h2 {
 }
 
 #title {
-  background-color: #BFEAF5;
+  background-color: #579BB1;
   color: #fff;
 }
 
@@ -25,20 +25,14 @@ h2 {
 }
 
 #cta {
-  padding-top: 90px;
+  padding-top: 10px;
   text-align: center;
   line-height: 2;
-  background-color: #BFEAF5;
-}
-
-em {
-  margin-top: 5%;
-  color: #fff;
-  font-family: 'Ubuntu', sans-serif;
+  background-color: #579BB1;
 }
 
 .end-p {
-  padding: 7% 15%;
+  padding: 7% 10%;
   font-size: 50px;
   color: #fff;
 }
@@ -53,7 +47,7 @@ em {
 }
 
 #features {
-  padding: 7% 17%;
+  padding: 4% 14%;
   background-color: #fff;
   position: relative;
   z-index: 1;
@@ -69,11 +63,11 @@ em {
 }
 
 .footer-br {
-  padding: 4px 10px 4px;
+  padding: 0px 40px 50px;
 }
 
 .icon {
-  color: #BFEAF5;
+  color: #579BB1;
   margin-bottom: 1rem;
 }
 
@@ -109,7 +103,7 @@ em {
 /* Testimonial section */
 #testimonials {
   text-align: center;
-  background-color: #BFEAF5;
+  background-color: #579BB1;
 }
 
 .carousel-item {
@@ -122,7 +116,7 @@ em {
 }
 
 #press {
-  background-color: #BFEAF5;
+  background-color: #579BB1;
   text-align: center;
   padding-bottom: 2%;
   padding-top: 2%;
